--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.javaProject.shortlink</groupId>
     <artifactId>shortlink-all</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <properties>
         <java.version>17</java.version>
@@ -29,10 +30,16 @@
 
     <modules>
         <module>admin</module>
-        <module>aggregation</module>
         <module>project</module>
         <module>gateway</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
     <dependencyManagement>
         <dependencies>
@@ -131,10 +138,10 @@
                         <!--<eclipse>
                             <file>${maven.multiModuleProjectDirectory}/format/short-link_spotless_formatter.xml</file>
                         </eclipse>-->
-                        <licenseHeader>
-                            <!-- ${maven.multiModuleProjectDirectory} 爆红属于正常，并不影响编译或者运行，忽略就好 -->
-                            <file>${maven.multiModuleProjectDirectory}/format/license-header</file>
-                        </licenseHeader>
+<!--                        <licenseHeader>-->
+<!--                            &lt;!&ndash; ${maven.multiModuleProjectDirectory} 爆红属于正常，并不影响编译或者运行，忽略就好 &ndash;&gt;-->
+<!--                            <file>${maven.multiModuleProjectDirectory}/format/license-header</file>-->
+<!--                        </licenseHeader>-->
                     </java>
                 </configuration>
                 <executions>
