--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.44.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-jdbc-core</artifactId>
+            <version>5.3.2</version>
+        </dependency>
     </dependencies>
 
 </project>
